--- a/contact.html
+++ b/contact.html
@@ -41,10 +41,10 @@
 
     <div class="server-info">
         <h2>Server Information</h2>
-        <p>This mail server (<strong>finance.bayern</strong>) is operated by MSZ-Tools GmbH & Co. KG.<br>
+        <p>This mail server (<strong>msz-tools.de</strong>) is operated by MSZ-Tools GmbH & Co. KG.<br>
         It serves as a dedicated mail transport agent (MTA) under strict administration.<br>
         Anti-spam and anti-abuse policies are strictly enforced.</p>
-        <p><strong>IP:</strong> 46.224.120.130 &nbsp;|&nbsp; <strong>Hostname:</strong> mail.finance.bayern</p>
+        <p><strong>IP:</strong> 46.224.120.130 &nbsp;|&nbsp; <strong>Hostname:</strong> mail.msz-tools.de</p>
     </div>
 
 </body>
